--- a/financial-management-webapp/package.json
+++ b/financial-management-webapp/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "chart.js": "^4.4.3",
+    "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "mongoose": "^8.5.3",
     "react": "^18.3.1",
